--- a/scss/page.scss
+++ b/scss/page.scss
@@ -279,11 +279,13 @@
 
     .row-left {
       @include v.pad-width {
-        margin-bottom: 40px;
+        width: 50%;
+        margin-bottom: 20px;
       }
 
       @include v.phone-width {
-        margin-bottom: 40px;
+        width: 50%;
+        margin-bottom: 20px;
       }
     }
 
@@ -849,6 +851,9 @@
             padding: 8px 15px;
             display: flex;
             align-items: center;
+             @include v.phone-width {
+              padding: 8px;
+             }
           }
 
           span:first-of-type {
@@ -873,7 +878,7 @@
           }
 
           &.buy-ticket {
-            border: 1px solid v.$blue-bg-color;
+              border: 1px solid v.$blue-bg-color;
 
             &:hover {
               background-color: v.$blue-bg-color;
@@ -898,7 +903,7 @@
 
         @include v.phone-width {
           position: absolute;
-          width: 130px;
+          width: 100px;
           right: 0;
           padding-right: 0;
           margin-bottom: 20px;
@@ -907,6 +912,10 @@
     }
 
     .movie-title {
+      @include v.phone-width {
+        width: calc(100% - 110px);
+        padding-right: 10px;
+      }
       p {
         color: v.$blue-bg-color;
       }
@@ -932,6 +941,9 @@
       .booktime {
         cursor: pointer;
         @extend %weight600;
+         @include v.mini-width {
+          font-size: 0.8rem;
+         }
 
         span {
           font-weight: normal;
@@ -957,6 +969,9 @@
         position: absolute;
         right: 0;
         top: 20px;
+        @include v.phone-width {
+          width: 60%;
+        }
       }
 
       .material-icons {
@@ -981,6 +996,9 @@
         }
 
         @include v.phone-width {
+          width: 25%;
+        }
+        @include v.mini-width {
           width: 33.33%;
         }
 
@@ -1023,7 +1041,7 @@
 
       @include v.phone-width {
         padding-right: 0;
-        width: 40%;
+        width: 50%;
         margin: 0 auto 20px auto;
       }
     }
@@ -1256,7 +1274,6 @@
             @include v.bg-opacity(v.$blue-bg-color, 0.8);
           }
         }
-
       }
 
       &:nth-of-type(even) {
@@ -1332,6 +1349,9 @@
             min-width: 200px;
             text-align: left;
           }
+          &:nth-of-type(2) {
+            min-width: 100px;
+          }
         }
 
         .type {
@@ -1386,9 +1406,7 @@
   }
 
   .actions {
-    button {
-      width: fit-content;
-      color: #000;
+    .actions-btn {
       display: flex;
       align-items: center;
 
