--- a/scss/page.scss
+++ b/scss/page.scss
@@ -4,6 +4,7 @@
 
 
 .section {
+
   .showing-list {
     text-align: center;
     position: relative;
@@ -132,65 +133,6 @@
     }
   }
 
-  .movie-item {
-
-    .up-date {
-      margin: 5px 0 30px 0;
-      color: v.$primary;
-    }
-
-    .movie-level {
-      margin-top: 0;
-    }
-
-    .book-btn {
-      display: inline-block;
-      padding: 8px 25px;
-      background-color: #5a98c0;
-      border-radius: 5px;
-      margin-bottom: 30px;
-      color: v.$font-primary;
-      cursor: pointer;
-      @extend %weight400;
-
-      .material-icons {
-        margin-right: 10px;
-      }
-    }
-
-    .list-item {
-      >div {
-        margin-bottom: 10px;
-        @extend %weight600;
-
-        &:last-of-type {
-          margin-bottom: 0;
-        }
-
-        span {
-          font-weight: normal;
-          border-left: 1px solid #fff;
-          padding-left: 10px;
-          margin-left: 10px;
-          display: inline-block;
-        }
-      }
-
-      .list-row {
-        width: 100%;
-        display: -webkit-inline-box;
-
-        div {
-          max-width: 93%;
-
-          @include v.mini-width() {
-            max-width: 90%;
-          }
-        }
-      }
-    }
-  }
-
   .movies {
     .actions {
       justify-content: flex-start;
@@ -212,24 +154,16 @@
 
         @include v.pad-width {
           padding-right: 0;
-          margin-bottom: 20px;
+          width: 50%;
+          margin: 0 auto 20px auto;
         }
 
         @include v.phone-width {
           padding-right: 0;
-          margin-bottom: 20px;
+          width: 50%;
+          margin: 0 auto 20px auto;
 
         }
-      }
-    }
-
-    .row-3 {
-      @include v.pad-width {
-        width: 100%;
-      }
-
-      @include v.phone-width {
-        width: 100%;
       }
     }
   }
@@ -851,9 +785,10 @@
             padding: 8px 15px;
             display: flex;
             align-items: center;
-             @include v.phone-width {
+
+            @include v.phone-width {
               padding: 8px;
-             }
+            }
           }
 
           span:first-of-type {
@@ -878,7 +813,7 @@
           }
 
           &.buy-ticket {
-              border: 1px solid v.$blue-bg-color;
+            border: 1px solid v.$blue-bg-color;
 
             &:hover {
               background-color: v.$blue-bg-color;
@@ -916,6 +851,7 @@
         width: calc(100% - 110px);
         padding-right: 10px;
       }
+
       p {
         color: v.$blue-bg-color;
       }
@@ -941,9 +877,10 @@
       .booktime {
         cursor: pointer;
         @extend %weight600;
-         @include v.mini-width {
+
+        @include v.mini-width {
           font-size: 0.8rem;
-         }
+        }
 
         span {
           font-weight: normal;
@@ -969,6 +906,7 @@
         position: absolute;
         right: 0;
         top: 20px;
+
         @include v.phone-width {
           width: 60%;
         }
@@ -998,6 +936,7 @@
         @include v.phone-width {
           width: 25%;
         }
+
         @include v.mini-width {
           width: 33.33%;
         }
@@ -1349,6 +1288,7 @@
             min-width: 200px;
             text-align: left;
           }
+
           &:nth-of-type(2) {
             min-width: 100px;
           }
@@ -1697,37 +1637,46 @@
       }
     }
   }
- 
+
 }
-.discount{
+
+//會員優惠
+.discount {
   padding: 0;
-  .section{
-    &:nth-of-type(2){
-       width: 100%;
-       max-width: 100%;
-       margin: 0;
+
+  .section {
+    &:nth-of-type(2) {
+      width: 100%;
+      max-width: 100%;
+      margin: 0;
     }
-    .content{
+
+    .content {
       padding: 0 15px;
+
       @include v.phone-width {
-        padding:0 10px;
+        padding: 0 10px;
       }
     }
   }
-  .discount-info{
+
+  .discount-info {
     justify-content: space-between;
     margin-bottom: 80px;
-    .row-3{
+
+    .row-3 {
       @include v.pad-width {
-        padding:0 10px;
+        padding: 0 10px;
         margin-bottom: 20px;
-      } 
+      }
+
       @include v.phone-width {
-        padding:0;
+        padding: 0;
         margin-bottom: 15px;
-      } 
+      }
     }
-    .info{
+
+    .info {
       position: relative;
       background-color: v.$yellow-bg-color;
       color: v.$secondary;
@@ -1736,23 +1685,26 @@
       padding: 10px;
       margin-bottom: 20px;
       @extend %weight600;
-      .star{
+
+      .star {
         position: absolute;
         top: -10px;
         left: 35px;
         width: 50px;
         height: 50px;
-        background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.6364 2L11.0909 38L38 11.8526L2 17.1579L38 31.9368L17.6364 2Z' stroke='%23C53932' stroke-width='3' stroke-linejoin='round'/%3E%3C/svg%3E ");       
+        background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.6364 2L11.0909 38L38 11.8526L2 17.1579L38 31.9368L17.6364 2Z' stroke='%23C53932' stroke-width='3' stroke-linejoin='round'/%3E%3C/svg%3E ");
         background-repeat: no-repeat;
         background-size: contain;
       }
     }
-    li{
+
+    li {
       width: 90%;
       margin: 0 auto 10px auto;
       margin-bottom: 10px;
-      &::before{
-        content:'';
+
+      &::before {
+        content: '';
         position: relative;
         top: 20px;
         height: 0px;
